# minishell

./: .gitignore  CMakeLists.txt  Makefile  main.c  minishell  test.txt
docs/: changelog.txt  man.txt  man_signals.txt  sample_signals.c  test_case.txt  test_eof.c  test_minishell.sh
ft_printf/: Makefile  ft_atoi.c  ft_isdigit.c  ft_printf.c  ft_printf.h  ft_strchr.c  ft_strlen.c  ft_tolower.c  ft_toupper.c  get_specs.c  parse_num.c  prefix_func.c  print_functions_1.c  utils.c
includes/: minishell  minishell.h  minishell.h.gch
libft/: Makefile  ft_atoi.c  ft_bzero.c  ft_calloc.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_itoa.c  ft_lstadd_back.c  ft_lstadd_front.c  ft_lstclear.c  ft_lstdelone.c  ft_lstiter.c  ft_lstlast.c  ft_lstmap.c  ft_lstnew.c  ft_lstsize.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memmove.c  ft_memset.c  ft_putchar_fd.c  ft_putendl_fd.c  ft_putnbr_fd.c  ft_putstr_fd.c  ft_split.c  ft_strchr.c  ft_strdup.c  ft_strjoin.c  ft_strlcat.c  ft_strlcpy.c  ft_strlen.c  ft_strmapi.c  ft_strncmp.c  ft_strnstr.c  ft_strrchr.c  (+5 more)
src/args/: arg.c
src/builtins/: builtins.c  cd.c  echo.c  exit.c
src/command/: command.c  command2.c  command3.c
src/env/: env.c  env2.c
src/errors/: errors.c  errors2.c  errors3.c
src/exec/: execution.c  execution2.c  execution3.c
src/parser/: parse3.c  parser.c  parser2.c  parser3.c  parser4.c
src/parser/args/: arg.c
src/parser/command/: command.c
src/parser/env/: env.c
src/redirect/: redirect.c
src/signals/: signals_handlers.c
src/utils/: utils.c  utils2.c
